feat(billboards y peliculas): refinamiento crud de carteleras